# Civil-Agent-Main

./: .env.example  .gitignore  Ingestinglayer.md  README.md  _index_snapshot.html  alembic.ini  app.js  docker-compose.yml  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  styles.css
apps/api/: main.py  schemas.py
apps/worker/: worker.py
css/: canvas.css  components.css  intake.css  layout.css  optimization-anim.css  pages.css  placement.css  reset.css  transitions.css  variables.css
dev/: s3-bucket-cors.json
docker/: api.Dockerfile  worker.Dockerfile
docs/: API.md  RUNBOOK.md  agent-2-qa-checklist.md
js/: main.js  render.js  router.js  state.js
js/api/: client.js  files.js  loads.js  parse.js  projects.js  schemes.js  sizing.js  upload.js
js/canvas/: camera-controls.js  canvas-controller.js  interaction-controller.js  label-manager.js  material-registry.js  optimization-animation.js  optimization-presets.js  overlay-controller.js  page-mode-controller.js  parsed-geometry-adapter.js  parsed-geometry-cache.js  scene-object-registry.js  scheme-adapter.js  structural-model-builder.js  structural-objects.js  svg-canvas.js  three-canvas.js
js/components/: assistant-drawer.js  bottom-tray.js  command-palette.js  inspector.js  modal.js  placement-compare-modal.js  scheme-generator.js  sidebar.js  sizing-runner.js  toast.js  topbar.js
js/data/: constants.js  mock-assumptions.js  mock-members.js  mock-project.js  mock-schemes.js  mock-vault.js  types.js
js/intake/: auto-detect.js  classifier.js  input-engine.js  plan-generator.js  session.js  store.js  templates.js  types.js
js/loads/: load-engine.js  load-runner.js
js/pages/: assumptions.js  canvas-page.js  new-project.js  overview.js  processing.js  projects.js  reports.js  settings.js  vault.js
js/placement/: placement-binding.js  placement-engine.js  placement-interactions.js  placement-svg-renderer.js  placement-three-renderer.js
js/utils/: dom.js  helpers.js  icons.js
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_parse_options.py  0003_schemes_and_audit.py  0004_member_sizing.py
tests/: conftest.py
tests/contract/: test_agent2_handoff.py  test_api_state_machine.py  test_auth_jwt.py  test_schemes_api.py  test_sizing_api.py  test_websocket_progress.py
tests/fixtures/: mock_ifc.py  (+2 more)
(+55 files in other folders)
