[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "civilagent-backend"
version = "1.0.0"
description = "CivilAgent backend: IFC geometry parser service (Agent 1)."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "CivilAgent Engineering" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "arq>=0.26.0",
    "redis>=5.0.0",
    "boto3>=1.35.0",
    "shapely>=2.0.0",
    "anthropic>=0.40.0",
    "ifcopenshell>=0.8.0",
    "ezdxf>=1.3.0",
    "PyMuPDF>=1.24.0",
    "pdf2image>=1.17.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "orjson>=3.10.0",
    "PyJWT[crypto]>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.0",
    "freezegun>=1.5.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
    "black>=24.4.0",
    "aiosqlite>=0.20.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "packages*"]

# Vercel FastAPI: app is not at api/main.py — point the builder at the real module.
# https://vercel.com/docs/frameworks/backend/fastapi#exporting-the-fastapi-application
[tool.vercel]
entrypoint = "apps.api.main:app"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S"]
ignore = ["S101", "S603", "S311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = "test_*.py"
addopts = "-ra -q --strict-markers --tb=short"
markers = [
    "unit: fast unit tests",
    "integration: integration tests requiring services",
    "contract: API/data contract tests",
    "slow: tests that exceed 1s",
    "ifc: tests requiring IfcOpenShell native libs",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
timeout = 60

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["tests/", "migrations/"]
